--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+
+
+/* 
+*
 
 body {
   font-family: 'Arial', sans-serif;
@@ -89,4 +94,4 @@ input[type="date"] {
     width: 100%;
     margin-top: 20px;
   }
-}
+} */
